<resources>
    <string name="app_name">CoinTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_coins">All Coins</string>
    <string name="wish_list">Wishlist</string>
    <string name="portfolio">Portfolio</string>
    <string name="key_price">Key Prices</string>
    <string name="welcome">Welcome</string>
    <string name="price">Price</string>
    <string name="market">Market</string>
    <string name="not_found">Not Found!</string>
    <string name="rupee">₹</string>
    <string name="add_key_price">Add Key Price</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_amount">Enter amount</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="all_key_prices">All Key Prices</string>
    <string name="total_invested_value">TOTAL INVESTED VALUE</string>
    <string name="new_transaction">New Transaction</string>


</resources>