<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/allCoins">

    <fragment
        android:id="@+id/allCoins"
        android:name="com.file.saurabh.cointracker.AllCoinsFragment"
        android:label="@string/all_coins"
        tools:layout="@layout/fragment_all_coins" />
    <fragment
        android:id="@+id/wishlist"
        android:name="com.file.saurabh.cointracker.WishlistFragment"
        android:label="@string/wish_list"
        tools:layout="@layout/fragment_wishlist" />
    <fragment
        android:id="@+id/portfolio"
        android:name="com.file.saurabh.cointracker.PortfolioFragment"
        android:label="@string/portfolio"
        tools:layout="@layout/fragment_portfolio" >
        <action
            android:id="@+id/action_portfolio_to_transactionsFragment"
            app:destination="@id/transactionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/alerts"
        android:name="com.file.saurabh.cointracker.KeyPricesFragment"
        android:label="@string/key_price"
        tools:layout="@layout/fragment_key_prices" >
        <action
            android:id="@+id/action_alerts_to_wishlist"
            app:destination="@id/wishlist"
            app:popUpTo="@id/alerts"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.file.saurabh.cointracker.TransactionsFragment"
        android:label="Transactions: {coinName}"
        tools:layout="@layout/fragment_transactions" >
        <argument
            android:name="coinName"
            app:argType="string" />
    </fragment>
</navigation>